--- a/style.css
+++ b/style.css
@@ -54,6 +54,15 @@ p {
     background-color: #cc0000;
 }
 
+/* زر Discord (أزرق) */
+.btn-discord {
+    background-color: #5865F2;
+}
+
+.btn-discord:hover {
+    background-color: #3c4bc9;
+}
+
 footer {
     margin-top: 50px;
     font-size: 0.9em;
